<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:overScrollMode="never"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".VerifyOtpNewPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="Forget Password"
            android:layout_gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/recieve"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/otp_verification"
            android:layout_gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/enter_the_otp"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textmobile"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:layout_width="40dp"
                android:layout_height="45sp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:id="@+id/inputcode1"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:layout_width="40dp"
                android:layout_height="45sp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:id="@+id/inputcode2"
                android:layout_marginStart="4dp"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_marginLeft="4dp" />

            <EditText
                android:layout_width="40dp"
                android:layout_height="45sp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:id="@+id/inputcode3"
                android:layout_marginStart="4dp"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_marginLeft="4dp" />

            <EditText
                android:layout_width="40dp"
                android:layout_height="45sp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:id="@+id/inputcode4"
                android:layout_marginStart="4dp"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_marginLeft="4dp" />

            <EditText
                android:layout_width="40dp"
                android:layout_height="45sp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:id="@+id/inputcode5"
                android:layout_marginStart="4dp"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_marginLeft="4dp" />

            <EditText
                android:layout_width="40dp"
                android:layout_height="45sp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:id="@+id/inputcode6"
                android:layout_marginStart="4dp"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_marginLeft="4dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Didn't receive the OTP"
                android:textColor="@color/colorTextSecondary"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/textResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/resend_otp"
                android:textColor="@color/teal_200"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginLeft="8dp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonVerify"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:background="@drawable/background_button"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>

    </LinearLayout>

</ScrollView>